test/tests/operators/each/non_source.txt
error: operator expects events
 --> tests/operators/each/non_source.tql:6:3
  |
6 |   where x == 1
  |   ^^^^^ 
  |

error: pipeline inside `each` must be a source
 --> tests/operators/each/non_source.tql:5:6
  |
5 | each {
  |      ^^^^^^^^^^^^^^^^^^ 
  |
